[package]
name = "beta_game"
version = "0.1.0"
edition = "2021"

[features]
default = ["egui"]
egui = ["dep:bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.14.2", features = ["bevy_pbr", "dynamic_linking", "embedded_watcher", "multi_threaded"] }
bevy-inspector-egui = { version = "0.25.2", optional = true }
log = "0.4.20"
rand = "0.8.5"

bevy_rapier2d = { version = "0.27.0", features = [ "simd-stable", "debug-render-2d" ] }
bevy_fmod = "0.5.0" 
bevy_vello = "0.6"
bevy_hanabi = "0.12"
bevy_tweening = "0.11"
serde = { version = "1.0.210", features = ["derive"] }
bevy_pancam = "0.14.0"
bevy-inspector-egui-rapier = "0.9.0"
bevy_lit = "0.3.0"
bevy_spatial = "0.9.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 3
panic = "abort"
